finish mobile design

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -29,15 +29,17 @@ main{
     flex-direction: column;
     justify-content: center;
     margin-top: 2.5rem;
+    padding-bottom: 2rem;
     width: 375px;
 }
 
-.content{
+.options{
     padding: 0 30px;
 }
 
 .bill-div{
     padding-top: 2rem;
+    position: relative;
 
     label{
         color: $text;
@@ -57,6 +59,12 @@ main{
         text-align: end;
         padding: 6px 18px;
         width: 100%;
+    }
+
+    #dollar{
+        position: absolute;
+        bottom: 12.5%;
+        left: 6.3%;
     }
 }
 
@@ -86,11 +94,17 @@ main{
             font-weight: 700;
             padding: 7px 18px;
         }
+
+        #custom-percent{
+            background-color: $bgInput;
+            text-align: end;
+        }
     }
 }
 
 .people{
     margin-top: 2rem;
+    position: relative;
 
     label{
         color: $text;
@@ -108,8 +122,62 @@ main{
         padding: 8px 20px;
         width: 100%;
     }
+
+    #person{
+        position: absolute;
+        bottom: 24%;
+        left: 6%;
+    }
 }
 
 .total{
-    margin-top: 2rem;
+    background-color: $bgButton;
+    border-radius: 16px;
+    margin-top: 1.9rem;
+    padding: 0 25px;
+    width: 330px;
+
+    .amount-div{
+        margin-top: 2.5rem;
+        position: relative;
+
+        .amount{
+            color: $bgMain;
+            font-family: $fontFamily;
+        }
+
+        .per-person{
+            color: $text;
+            font-size: 13px;
+            font-weight: 700;
+        }
+
+        .tip-total{
+            color: $bgButtonActive;
+            font-family: $fontFamily;
+            font-size: 32px;
+            font-weight: 700;
+            position: absolute;
+            right: -2px;
+            top: -5px;
+        }
+    }
+
+    .tip-total-div{
+        @extend .amount-div;
+        margin-top: 1.5rem;
+    }
+
+    #reset{
+        background-color: $bgButtonActive;
+        border: none;
+        color: $bgButton;
+        font-family: $fontFamily;
+        font-size: 20px;
+        font-weight: 700;
+        text-transform: uppercase;
+        margin-top: 2rem;
+        margin-bottom: 1.5rem;
+        padding: 9px 110px;
+    }
 }
