--- a/sass/index.css
+++ b/sass/index.css
@@ -47,15 +47,17 @@ main {
       -ms-flex-pack: center;
           justify-content: center;
   margin-top: 2.5rem;
+  padding-bottom: 2rem;
   width: 375px;
 }
 
-.content {
+.options {
   padding: 0 30px;
 }
 
 .bill-div {
   padding-top: 2rem;
+  position: relative;
 }
 
 .bill-div label {
@@ -76,6 +78,12 @@ main {
   text-align: end;
   padding: 6px 18px;
   width: 100%;
+}
+
+.bill-div #dollar {
+  position: absolute;
+  bottom: 12.5%;
+  left: 6.3%;
 }
 
 .tip-div {
@@ -110,8 +118,14 @@ main {
   padding: 7px 18px;
 }
 
+.tip-div .buttons-div #custom-percent {
+  background-color: #f4fafa;
+  text-align: end;
+}
+
 .people {
   margin-top: 2rem;
+  position: relative;
 }
 
 .people label {
@@ -131,7 +145,60 @@ main {
   width: 100%;
 }
 
+.people #person {
+  position: absolute;
+  bottom: 24%;
+  left: 6%;
+}
+
 .total {
+  background-color: #00494d;
+  border-radius: 16px;
+  margin-top: 1.9rem;
+  padding: 0 25px;
+  width: 330px;
+}
+
+.total .amount-div, .total .tip-total-div {
+  margin-top: 2.5rem;
+  position: relative;
+}
+
+.total .amount-div .amount, .total .tip-total-div .amount {
+  color: white;
+  font-family: "Space Mono", monospace;
+}
+
+.total .amount-div .per-person, .total .tip-total-div .per-person {
+  color: #5e7a7d;
+  font-size: 13px;
+  font-weight: 700;
+}
+
+.total .amount-div .tip-total, .total .tip-total-div .tip-total {
+  color: #26c0ab;
+  font-family: "Space Mono", monospace;
+  font-size: 32px;
+  font-weight: 700;
+  position: absolute;
+  right: -2px;
+  top: -5px;
+}
+
+.total .tip-total-div {
+  margin-top: 1.5rem;
+}
+
+.total #reset {
+  background-color: #26c0ab;
+  border: none;
+  color: #00494d;
+  font-family: "Space Mono", monospace;
+  font-size: 20px;
+  font-weight: 700;
+  text-transform: uppercase;
   margin-top: 2rem;
+  margin-bottom: 1.5rem;
+  padding: 9px 110px;
 }
 /*# sourceMappingURL=index.css.map */
