--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -4,6 +4,7 @@ $bgPage: hsl(185, 41%, 84%);
 $bgMain: hsl(0, 0%, 100%);
 $bgButton: hsl(183, 100%, 15%);
 $bgButtonActive: hsl(172, 67%, 45%);
+$bgHover: hsl(172, 68%, 73%);
 $text: hsl(186, 14%, 43%);
 $bgInput: hsl(189, 41%, 97%);
 $imgColor: hsl(184, 14%, 56%);
