--- a/sass/index.css
+++ b/sass/index.css
@@ -144,6 +144,13 @@ main {
   font-weight: 600;
 }
 
+@media screen and (min-width: 1200px) {
+  .tip-div p {
+    margin-left: 1rem;
+    padding-top: 0.5rem;
+  }
+}
+
 .tip-div .buttons-div {
   -ms-grid-columns: (minmax(0, 1fr))[2];
       grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -161,6 +168,8 @@ main {
         grid-template-columns: repeat(3, minmax(0, 1fr));
     -ms-grid-rows: (minmax(0, 1fr))[2];
         grid-template-rows: repeat(2, minmax(0, 1fr));
+    margin-left: 1rem;
+    width: 95%;
   }
 }
 
@@ -195,9 +204,24 @@ main {
   position: relative;
 }
 
+@media screen and (min-width: 1200px) {
+  .people {
+    margin-top: 2.4rem;
+    margin-left: 1rem;
+  }
+}
+
 .people label {
   color: #5e7a7d;
   font-weight: 700;
+}
+
+.people .error-message {
+  color: red;
+  font-family: "Space Mono", monospace;
+  font-weight: 700;
+  display: none;
+  position: absolute;
 }
 
 .people #num-people {
