--- a/sass/index.scss
+++ b/sass/index.scss
@@ -42,6 +42,7 @@ main{
         flex-direction: row;
         width: 920px;
         padding-top: 0;
+        padding-bottom: 1.9rem;
         margin-top: 5.6rem;
     }
 }
@@ -52,6 +53,7 @@ main{
     @media screen and (min-width: 1200px) {
         width: 50%;
         margin-right: 5px;
+        margin-bottom: 15px;
         padding-left: 20px;
         padding-right: 40px;
     }
@@ -213,6 +215,10 @@ main{
         position: absolute;
         bottom: 24%;
         left: 6%;
+
+        @media screen and (min-width: 1200px) {
+            left: 4%;
+        }
     }
 }
 
@@ -227,8 +233,8 @@ main{
         margin-right: 20px;
         margin-top: 2rem;
         width: 44.8%;
-        padding: 0;
-        height: 400px;
+        padding-top: 0;
+        height: 415px;
     }
 
     .amount-div{
@@ -244,7 +250,7 @@ main{
             font-family: $fontFamily;
 
             @media screen and (min-width: 1200px) {
-                padding-left: 40px;
+                padding-left: 15px;
             }
         }
 
@@ -254,7 +260,7 @@ main{
             font-weight: 700;
 
             @media screen and (min-width: 1200px) {
-                padding-left: 40px;
+                padding-left: 15px;
                 padding-bottom: 20px;
                 margin-bottom: 0px;
             }
@@ -270,7 +276,7 @@ main{
             top: -5px;
 
             @media screen and (min-width: 1200px) {
-                padding-right: 40px;
+                padding-right: 10px;
                 font-size: 48px;
                 top: -25%;
             }
@@ -288,6 +294,7 @@ main{
 
     #reset{
         background-color: $bgButtonActive;
+        border-radius: 5px;
         border: none;
         color: $bgButton;
         font-family: $fontFamily;
@@ -302,8 +309,9 @@ main{
             display: block;
             margin: 0 auto;
             margin-top: 7rem;
-            width: 80%;
-        
+            margin-bottom: 2rem;
+            width: 90%;
+            
         }
     }
 
