add styles to title and bill input

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap');
 
-$bgPage: hsl(185, 41%, 84%);
-$bgMain: hsl(0, 0%, 100%);
-$bgButton: hsl(183, 100%, 15%);
-$bgButtonActive: hsl(172, 67%, 45%);
-$bgHover: hsl(172, 68%, 73%);
+$backgroundPage: hsl(185, 41%, 84%);
+$backgroundMain: hsl(0, 0%, 100%);
+$backgroundButton: hsl(183, 100%, 15%);
+$backgroundButtonActive: hsl(172, 67%, 45%);
+$backgroundHover: hsl(172, 68%, 73%);
 $text: hsl(186, 14%, 43%);
-$bgInput: hsl(189, 41%, 97%);
-$imgColor: hsl(184, 14%, 56%);
+$backgroundInput: hsl(189, 41%, 97%);
+$imageColor: hsl(184, 14%, 56%);
 $fontFormInput: 24px;
 $fontFamily: 'Space Mono', monospace;
