--- a/sass/index.scss
+++ b/sass/index.scss
@@ -7,317 +7,69 @@ html *{
 }
 
 body{
-    align-items: center;
-    background-color: $bgPage;
+    background-color: $backgroundPage;
+    width: 100%;
+    height: 100%;
+}
+
+.container{
+    max-width: 1440px;
     display: flex;
-    font-family: $fontFamily;
     flex-direction: column;
-    min-height: 100%;
     justify-content: center;
+    align-items: center;
+}
 
-    .logo{
-        padding-top: 3.1rem;
-
-        @media screen and (min-width: 1200px) {
-            padding-top: 10rem;
-        }
-    }
+.logo{
+    margin: 0 auto;
+    margin-top: 3rem;
 }
 
 main{
-    align-items: center;
-    background-color: $bgMain;
-    border-top-left-radius: 25px;
-    border-top-right-radius: 25px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    width: 100%;
     margin-top: 2.5rem;
-    padding-bottom: 2rem;
-    width: 375px;
-
-    @media screen and (min-width: 1200px) {
-        border-bottom-left-radius: 25px;
-        border-bottom-right-radius: 25px;
-        flex-direction: row;
-        width: 920px;
-        padding-top: 0;
-        padding-bottom: 1.9rem;
-        margin-top: 5.6rem;
-    }
 }
 
-.options{
-    padding: 0 30px;
-
-    @media screen and (min-width: 1200px) {
-        width: 50%;
-        margin-right: 5px;
-        margin-bottom: 15px;
-        padding-left: 20px;
-        padding-right: 40px;
-    }
+.content{
+    background-color: $backgroundMain;
+    border-radius: 25px;
+    width: 100%;
+    padding: 2rem 2rem;
+    font-family: $fontFamily;
+    
 }
 
-.bill-div{
-    padding-top: 2rem;
-    position: relative;
-
-    @media screen and (min-width: 1200px) {
-        padding-top: 2.9rem;
-    }
-
-    label{
-        color: $text;
-        display: block;
-        font-weight: 700;
-        margin-bottom: 5px;
-
-        @media screen and (min-width: 1200px) {
-            margin-left: 1rem;
-        }
-    }
-
-    #bill{
-        background-color: $bgInput;
-        border: none;
-        color: $bgButton;
-        font-family: $fontFamily;
-        font-size: $fontFormInput;
-        font-weight: 700;
-        outline: none;
-        text-align: end;
-        padding: 6px 18px;
-        width: 100%;
-    }
-
-    #bill:hover{
-        cursor: pointer;
-    }
-
-    #dollar{
-        position: absolute;
-        bottom: 12.5%;
-        left: 6.3%;
-
-        @media screen and (min-width: 1200px) {
-            left: 9%;
-        }
-    }
+#bill{
+    display: block;
+    margin-top: 0.5rem;
+    width: 100%;
+    height: 3rem;
+    border: none;
+    border-radius: 10px;
+    outline: none;
+    background-color: $backgroundInput;
 }
 
-.tip-div{
+label{
+    font-weight: 700;
+    color: $text;
+}
+
+.select_tip{
     margin-top: 2rem;
-
-    @media screen and (min-width: 1200px) {
-
-    }
-
-    p{
-        color: $text;
-        font-family: $fontFamily;
-        font-weight: 600;
-
-        @media screen and (min-width: 1200px) {
-            margin-left: 1rem;
-            padding-top: 0.5rem;
-        }
-    }
-
-    .buttons-div{
-        grid-template-columns: repeat(2, minmax(0, 1fr));;
-        grid-template-rows: repeat(3, minmax(0, 1fr));
-        display: grid;
-        gap: 14px;
-        padding-top: 1rem;
-
-        @media screen and (min-width: 1200px) {
-            grid-template-columns: repeat(3, minmax(0, 1fr));;
-            grid-template-rows: repeat(2, minmax(0, 1fr));
-            margin-left: 1rem;
-            width: 95%;
-        }
-       
-        .tip-button{
-            background-color: $bgButton;
-            border: none;
-            border-radius: 5px;
-            color: $bgMain;
-            font-family: $fontFamily;
-            font-size: $fontFormInput;
-            font-weight: 700;
-            padding: 7px 18px;
-        }
-
-        .tip-button:hover{
-            background-color: $bgButtonActive;
-            color: $bgButton;
-            cursor: pointer;
-        }
-
-        #custom-percent{
-            font-size: 24px;
-            padding-left: 5px;
-            background-color: $bgInput;
-            text-align: end;
-        }
-
-        #custom-percent:focus{
-            outline: 1px solid $bgButtonActive;
-        }
-
-    }
 }
 
-.people{
-    margin-top: 2rem;
-    position: relative;
-
-            
-    @media screen and (min-width:1200px) {
-        margin-top: 2.4rem;
-        margin-left: 1rem;
-    }
-
-    label{
-        color: $text;
-        font-weight: 700;
-
-
-    }
-
-    .error-message{
-        color: red;
-        font-family: $fontFamily;
-        font-weight: 700;
-        display: none;
-        position: absolute;
-    }
-
-    #num-people{
-        border: none;
-        background-color: $bgInput;
-        font-family: $fontFamily;
-        font-size: $fontFormInput;
-        font-weight: 700;
-        text-align: end;
-        margin-top: 5px;
-        padding: 8px 20px;
-        width: 100%;
-
-    }
-
-    #num-people{
-        cursor: pointer;
-    }
-
-    #person{
-        position: absolute;
-        bottom: 24%;
-        left: 6%;
-
-        @media screen and (min-width: 1200px) {
-            left: 4%;
-        }
-    }
+.buttons_div{
+    margin-top: 1rem;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 1rem;
 }
 
-.total{
-    background-color: $bgButton;
-    border-radius: 16px;
-    margin-top: 1.9rem;
-    padding: 0 25px;
-    width: 330px;
-
-    @media screen and (min-width: 1200px) {
-        margin-right: 20px;
-        margin-top: 2rem;
-        width: 44.8%;
-        padding-top: 0;
-        height: 415px;
-    }
-
-    .amount-div{
-        margin-top: 2.4rem;
-        position: relative;
-
-        @media screen and (min-width: 1200px) {
-            margin-top: 3.4rem;
-        }
-
-        .amount{
-            color: $bgMain;
-            font-family: $fontFamily;
-
-            @media screen and (min-width: 1200px) {
-                padding-left: 15px;
-            }
-        }
-
-        .per-person{
-            color: $text;
-            font-size: 13px;
-            font-weight: 700;
-
-            @media screen and (min-width: 1200px) {
-                padding-left: 15px;
-                padding-bottom: 20px;
-                margin-bottom: 0px;
-            }
-        }
-
-        .tip-total{
-            color: $bgButtonActive;
-            font-family: $fontFamily;
-            font-size: 32px;
-            font-weight: 700;
-            position: absolute;
-            right: -2px;
-            top: -5px;
-
-            @media screen and (min-width: 1200px) {
-                padding-right: 10px;
-                font-size: 48px;
-                top: -25%;
-            }
-        }
-    }
-
-    .tip-total-div{
-        @extend .amount-div;
-        margin-top: 1.5rem;
-
-        @media screen and (min-width: 1200px){
-            margin-top: 2rem;
-        }
-    }
-
-    #reset{
-        background-color: $bgButtonActive;
-        border-radius: 5px;
-        border: none;
-        color: $bgButton;
-        font-family: $fontFamily;
-        font-size: 20px;
-        font-weight: 700;
-        text-transform: uppercase;
-        margin-top: 2rem;
-        margin-bottom: 1.5rem;
-        padding: 9px 110px;
-
-        @media screen and (min-width: 1200px){
-            display: block;
-            margin: 0 auto;
-            margin-top: 7rem;
-            margin-bottom: 2rem;
-            width: 90%;
-            
-        }
-    }
-
-    #reset:hover{
-        background-color: $bgHover;
-        color: $bgButton;
-        cursor: pointer;
-    }
+.tip_button{
+    border-radius: 5px;
+    border: none;
+    font-size: 16px;
 }
