--- a/sass/index.css
+++ b/sass/index.css
@@ -13,6 +13,25 @@ body {
   justify-content: center;
 }
 
+input {
+  font-family: "Space Mono", monospace;
+  font-size: 24px;
+  font-weight: 700;
+  color: hsl(172deg, 67%, 45%);
+  padding: 0.7rem 1rem 0.5rem 0;
+  text-align: end;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 .container {
   max-width: 1440px;
   display: flex;
@@ -85,7 +104,7 @@ label {
   border: none;
   font-weight: 700;
   font-size: 24px;
-  padding: 0.7rem 1.8rem;
+  padding: 0.4rem 1.8rem;
   background-color: hsl(183deg, 100%, 15%);
   color: hsl(0deg, 0%, 100%);
 }
@@ -107,7 +126,7 @@ label {
 .total {
   width: 330px;
   background-color: hsl(183deg, 100%, 15%);
-  margin-top: 2.3rem;
+  margin-top: 2.5rem;
   border-radius: 15px;
   padding: 0 1rem;
 }/*# sourceMappingURL=index.css.map */
